<resources>
    <string name="app_name">MyHome</string>

    <string name="switch1">switch1</string> <!-- Light 1 Switch -->
    <string name="switch2">switch2</string> <!-- Light 2 Switch -->
    <string name="switch3">switch3</string> <!-- Light 3 Switch -->
    <string name="switch4">switch4</string> <!-- Light 4 Switch -->
    <string name="switch5">switch5</string> <!-- Fan Switch -->
    <string name="mainSwitch">mainSwitch</string>
    <string name="deviceStatus">Device Status</string>
    <string name="noInternet">No Network Connectivity</string>
    <string name="getInternet">Kindly Check Your Mobile Data or Connect to a Wifi Network and Restart the App.</string>
    <string name="device_config">Device Config</string>
    <string name="options">Options</string>
    <string name="appwidget_text">Switch Board</string>
    <string name="app_widget_description">A Simple Home Screen Widget to Toggle Switches.</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="device_offline">Device Offline</string>
    <string name="device_online">Device Online</string>

</resources>
