<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetRoot"
    style="@style/Widget.MyHome.AppWidget.Container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MyHome.AppWidgetContainer">

    <TextView
        android:id="@+id/widgetTextView"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8sp"
        android:text="@string/appwidget_text"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/widgetSwitch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetTextView"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/switch1" />

    <Button
        android:id="@+id/widgetSwitch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetTextView"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/switch2" />

    <Button
        android:id="@+id/widgetSwitch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetSwitch1"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/switch3" />

    <Button
        android:id="@+id/widgetSwitch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetSwitch2"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/switch4" />

    <Button
        android:id="@+id/widgetSwitch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/widgetMainSwitch"
        android:layout_below="@+id/widgetTextView"
        android:layout_toStartOf="@+id/widgetSwitch3"
        android:layout_toEndOf="@+id/widgetSwitch4"
        android:contentDescription="@string/switch5" />

    <Button
        android:id="@+id/widgetMainSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetSwitch4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/mainSwitch" />
</RelativeLayout>
